# enterprise_mcp_server

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak2  docker-compose.yml.bak3  docker-compose.yml.bak_20251117_152145  env.example  init_db.sh  pyproject.toml  requirements.txt  ticketing_api.py
.claude/: settings.local.json
docker-entrypoint-initdb.d/: 01-init-database.sql
docs/: claude_setup.md  database_schema.sql
scripts/: claude_auth_setup.sh  setup_claude_integration.sh
src/: api.py  api_gateway.py  asgi.py  asgi.py.auth_fix  asgi.py.keycloak_bak  asgi.py.keycloak_bak2  audit.py  audit_api.py  auth.py  auth_api.py  dependencies.py  http_utils.py  mcp_postgres_db.py  run_mcp.py  server.py  tool_management_api.py  tool_versions_api.py
src/keycloak_auth/: __init__.py  config.py  dependencies.py  middleware.py  models.py  validator.py
src/tools/: claude.py  claude_auth.py  claude_old.py  tool.py
