[tool.poetry]
name = "enterprise_mcp_server"
version = "0.1.0"
description = ""
authors = ["georgiedekker <georgiedekker@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
fastmcp = ">=2.12.0,<3.0.0"
fastapi = {extras = ["all"], version = ">=0.115.12,<0.116.0"}
restrictedpython = ">=8.0,<9.0.0"
importlib = ">=1.0.4,<2.0.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
pathlib = ">=1.0.1,<2.0.0"
slowapi = ">=0.1.9,<0.2.0"
sse-starlette = ">=2.3.4,<3.0.0"
pytest = ">=8.3.5,<9.0.0"
jsonify = ">=0.5,<0.6"
httpx = ">=0.28.1,<0.29.0"
pyyaml = ">=6.0.2,<7.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = ">=2.11.0,<3.0.0"
pydantic-settings = ">=2.7.0,<3.0.0"
pyjwt = ">=2.10.0,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
redis = ">=6.0.0,<7.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
mcp = ">=1.8.0,<2.0.0"
claude-code-sdk = ">=0.0.10,<0.0.11"
aiohttp = ">=3.11.0,<4.0.0"
websockets = ">=13.0.0,<14.0.0"
uuid-v7 = ">=1.0.0,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
